--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -22,7 +22,87 @@
         </header>
 
         <main>
-            Products List
+
+            <section>
+                <ul class="products">
+
+                    <li>
+                        <div class="product">
+                            <a href="/#/pruduct">
+                                <img src="./images/product_1.webp" alt="product 1">
+                            </a>
+                            <div class="product_data">
+                                <a href="/#/product/1">
+                                    Fit Slim Shirt
+                                </a>
+                                <p>Nike</p>
+                                <p>$69</p>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="product">
+                            <a href="/#/pruduct">
+                                <img src="./images/product_1.webp" alt="product 1">
+                            </a>
+                            <div class="product_data">
+                                <a href="/#/product/1">
+                                    Fit Slim Shirt
+                                </a>
+                                <p>Nike</p>
+                                <p>$69</p>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="product">
+                            <a href="/#/pruduct">
+                                <img src="./images/product_1.webp" alt="product 1">
+                            </a>
+                            <div class="product_data">
+                                <a href="/#/product/1">
+                                    Fit Slim Shirt
+                                </a>
+                                <p>Nike</p>
+                                <p>$69</p>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="product">
+                            <a href="/#/pruduct">
+                                <img src="./images/product_1.webp" alt="product 1">
+                            </a>
+                            <div class="product_data">
+                                <a href="/#/product/1">
+                                    Fit Slim Shirt
+                                </a>
+                                <p>Nike</p>
+                                <p>$69</p>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="product">
+                            <a href="/#/pruduct">
+                                <img src="./images/product_1.webp" alt="product 1">
+                            </a>
+                            <div class="product_data">
+                                <a href="/#/product/1">
+                                    Fit Slim Shirt
+                                </a>
+                                <p>Nike</p>
+                                <p>$69</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+
         </main>
 
         <footer>
