--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-
+    <script src="./app.js" type="module"></script>
     <title>JS Amazona</title>
 </head>
 <body>
@@ -21,9 +21,21 @@
             </div>
         </header>
 
-        <main>
+        <main id="main_container">
 
-            <section>
+         
+        </main>
+
+        <footer>
+            All rights reserved @ 2021
+        </footer>
+    </div>
+
+</body>
+</html>
+
+
+   <!-- <section>
                 <ul class="products">
 
                     <li>
@@ -101,14 +113,4 @@
                         </div>
                     </li>
                 </ul>
-            </section>
-
-        </main>
-
-        <footer>
-            All rights reserved @ 2021
-        </footer>
-    </div>
-
-</body>
-</html>
+            </section> -->
