--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,15 +11,11 @@
 </head>
 
 <body>
+    <div id="loading-overlay" class="overlay">Loading...</div>
+    <div id="message-overlay" class="overlay"></div>
     <div class="grid-container">
-        <header>
-            <div class="brand">
-                <a href="/#/"><span>JS</span>amazona</a>
-            </div>
-            <div>
-                <a href="/#/signin">Sign-In</a>
-                <a href="/#/cart">Cart</a>
-            </div>
+        <header id="header_container">
+
         </header>
 
         <main id="main_container">
